include/lumen_simple.h


typedef uint64_t LumenNode;
typedef struct {
    LumenNode *ptr;
    size_t len;
} LumenNodeList;
typedef struct {
    double x;
    double y;
    double width;
    double height;
    double client_x;
    double client_y;
} LumenRect;
typedef struct {
    double x;
    double y;
    double max_x;
    double max_y;
} LumenScroll;
typedef struct {
    char *key;
    char *value;
} LumenKV;
typedef struct {
    LumenKV *ptr;
    size_t len;
} LumenKVList;
typedef struct {
    char **ptr;
    size_t len;
} LumenStrList;
typedef struct {
    double x;
    double y;
    int inside;
    uint32_t buttons;
    int shift;
    int ctrl;
    int alt;
    int super_;
} LumenPointerState;
typedef struct {
    uint64_t frame;
    double dt_ms;
    uint64_t dirty_count;
} LumenFrameInfo;
typedef uint64_t LumenEventToken;
 uint32_t lumen_abi_version(void) ;
 LumenApp *lumen_app_new(const char *dir) ;
 LumenApp *lumen_app_new_from_lmna(const uint8_t *data, size_t len, const char *base_dir) ;
 LumenStatus lumen_app_set_title(LumenApp *app, const char *title) ;
 LumenStatus lumen_app_set_size(LumenApp *app, uint32_t w, uint32_t h) ;
 void lumen_app_free(LumenApp *app) ;
 LumenStatus lumen_app_run(LumenApp *app) ;
 const char *lumen_last_error(void) ;
 const char *lumen_last_error_global(void) ;
 LumenStatus lumen_signal_clear(const char *name) ;
 LumenStatus lumen_signal_set_str(const char *name, const char *value) ;
 LumenStatus lumen_signal_get_str(const char *name, char *buf, size_t buf_len, size_t *out_len) ;
 LumenStatus lumen_signal_set_int64(const char *name, int64_t value) ;
 LumenStatus lumen_signal_get_int64(const char *name, int64_t *out) ;
 LumenStatus lumen_signal_set_float64(const char *name, double value) ;
 LumenStatus lumen_signal_get_float64(const char *name, double *out) ;
 LumenStatus lumen_signal_set_bool(const char *name, bool value) ;
 LumenStatus lumen_signal_get_bool(const char *name, bool *out) ;
 LumenStatus lumen_signal_set_color(const char *name, const uint8_t *rgba) ;
 LumenStatus lumen_signal_get_color(const char *name, uint8_t *out) ;
 const char *lumen_status_message(LumenStatus status) ;
 LumenStatus lumen_query(const char *selector, LumenNodeList *out_list) ;
 LumenStatus lumen_query_len(const char *selector, size_t *out_len) ;
 LumenStatus lumen_query_single(const char *selector, LumenNode *out) ;
 LumenStatus lumen_get_by_id(const char *id, LumenNode *out) ;
 LumenStatus lumen_document(LumenNode *out) ;
 LumenStatus lumen_node_parent(LumenNode node, LumenNode *out) ;
 LumenStatus lumen_node_first_child(LumenNode node, LumenNode *out) ;
 LumenStatus lumen_node_last_child(LumenNode node, LumenNode *out) ;
 LumenStatus lumen_node_next(LumenNode node, LumenNode *out) ;
 LumenStatus lumen_node_prev(LumenNode node, LumenNode *out) ;
 LumenStatus lumen_node_children(LumenNode node, LumenNodeList *out_list) ;
 LumenStatus lumen_node_closest(LumenNode node, const char *selector, LumenNode *out) ;
 LumenStatus lumen_node_valid(LumenNode node, int *out) ;
 LumenStatus lumen_nodelist_get(LumenNodeList list, size_t index, LumenNode *out) ;
 void lumen_nodelist_free(LumenNodeList list) ;
 LumenStatus lumen_node_rect(LumenNode node, LumenRect *out) ;
 LumenStatus lumen_node_content_rect(LumenNode node, LumenRect *out) ;
 LumenStatus lumen_node_scroll(LumenNode node, LumenScroll *out) ;
 LumenStatus lumen_node_is_visible(LumenNode node, int *out) ;
 LumenStatus lumen_node_z_index(LumenNode node, int *out) ;
 LumenStatus lumen_node_entity_id(LumenNode node, uint32_t *out_index, uint32_t *out_gen) ;
 LumenStatus lumen_node_computed_style(LumenNode node, LumenKVList *out) ;
 LumenStatus lumen_node_attrs(LumenNode node, LumenKVList *out) ;
 LumenStatus lumen_node_inline_style(LumenNode node, LumenKVList *out) ;
 LumenStatus lumen_node_component(LumenNode node, const char *name, LumenKVList *out) ;
 LumenStatus lumen_node_classes(LumenNode node, LumenStrList *out) ;
 LumenStatus lumen_node_components(LumenNode node, LumenStrList *out) ;
 LumenStatus lumen_node_outer_markup(LumenNode node, char **out) ;
 LumenStatus lumen_node_inner_markup(LumenNode node, char **out) ;
 LumenStatus lumen_dump_tree(char **out) ;
 LumenStatus lumen_pointer_state(LumenPointerState *out) ;
 LumenStatus lumen_frame_info(LumenFrameInfo *out) ;
 LumenStatus lumen_signals_all(LumenKVList *out) ;
 void lumen_kvlist_free(LumenKVList list) ;
 void lumen_strlist_free(LumenStrList list) ;
 void lumen_string_free(char *s) ;
 LumenStatus lumen_node_set_attr(LumenNode node, const char *name, const char *value) ;
 LumenStatus lumen_node_remove_attr(LumenNode node, const char *name) ;
 LumenStatus lumen_node_set_text(LumenNode node, const char *text) ;
 LumenStatus lumen_node_set_inner_markup(LumenNode node, const char *markup) ;
 LumenStatus lumen_node_class_add(LumenNode node, const char *class_) ;
 LumenStatus lumen_node_class_remove(LumenNode node, const char *class_) ;
 LumenStatus lumen_node_class_toggle(LumenNode node, const char *class_) ;
 LumenStatus lumen_node_set_style(LumenNode node, const char *name, const char *value) ;
 LumenStatus lumen_node_remove_style(LumenNode node, const char *name) ;