include/lumen.h


typedef struct LumenApp LumenApp;
typedef struct LumenValue    LumenValue;
typedef enum LumenStatus {
    LUMEN_OK                 = 0,
    LUMEN_ERR_BAD_PATH       = 1,
    LUMEN_ERR_BAD_ARG        = 2,
    LUMEN_ERR_RUNTIME        = 3,
    LUMEN_ERR_INTERNAL       = 4,
    LUMEN_ERR_PARSE          = 5,
    LUMEN_ERR_CSS            = 6,
    LUMEN_ERR_ASSET          = 7,
    LUMEN_ERR_WINDOW         = 8,
    LUMEN_ERR_SCRIPT         = 9,
    LUMEN_ERR_IO             = 10,
    LUMEN_ERR_INVALID_HANDLE = 11,
    LUMEN_ERR_INVALID_VALUE  = 12,
    LUMEN_ERR_PANIC          = 13,
    LUMEN_ERR_BUFFER_TOO_SMALL = 14,
} LumenStatus;
typedef enum LumenKind {
    LUMEN_NIL    = 0,
    LUMEN_BOOL   = 1,
    LUMEN_INT    = 2,
    LUMEN_FLOAT  = 3,
    LUMEN_STRING = 4,
    LUMEN_ARRAY  = 5,
    LUMEN_MAP    = 6,
} LumenKind;
typedef union LumenValueData {
    int             boolean;     
    int64_t         integer;     
    double          float_;      
    const char*     string;      
    LumenArrayView  array;       
    LumenMapView    map;         
} LumenValueData;
struct LumenValue {
    LumenKind       kind;
    LumenValueData  as_;
};
typedef LumenValue (*LumenFn)(int argc,
                              const LumenValue* argv,
                              void* user_data);
typedef void (*LumenFnV2)(LumenValue* out,
                          int argc,
                          const LumenValue* argv,
                          void* user_data);
typedef void (*LumenClickFn)(const char* id, void* user_data);
typedef void (*LumenWatchFn)(const char* name, const LumenValue* value,
                             void* user_data);
LumenStatus lumen_app_expose(LumenApp* app,
                             const char* name,
                             uint32_t arg_count,
                             LumenFn func,
                             void* user_data);
LumenStatus lumen_app_expose_v2(LumenApp* app,
                                const char* name,
                                uint32_t arg_count,
                                LumenFnV2 func,
                                void* user_data);
LumenStatus lumen_app_on_click(LumenApp* app,
                               const char* id,
                               LumenClickFn cb,
                               void* user_data);
LumenStatus lumen_signal_watch(const char* name,
                               LumenWatchFn cb,
                               void* user_data);
LumenStatus lumen_app_run_headless(LumenApp* app, uint32_t ticks);
LumenStatus lumen_signal_set_array (const char* name, const LumenValue* value);
LumenStatus lumen_signal_array_len (const char* name, size_t* out_len);
LumenStatus lumen_signal_array_get_field(const char* name, size_t row,
                                         const char* field,
                                         char* buf, size_t buf_len, size_t* out_len);