sdk/python/lumen/_ffi.py


    version = lib.lumen_abi_version()
    loaded_major = version >> 16
    loaded_minor = (version >> 8) & 0xFF
    loaded_patch = version & 0xFF
    if loaded_major != ABI_MAJOR or loaded_minor < ABI_MINOR:
        raise LumenAbiVersionError(
            "lumen ABI mismatch: this SDK was written against "
            f"{ABI_MAJOR}.{ABI_MINOR}.{ABI_PATCH} but the loaded library "
            f"reports {loaded_major}.{loaded_minor}.{loaded_patch}. "
            "A different major version, or an older minor version, is a "
            "hard incompatibility -- rebuild lumen or pin the SDK "
            "version that matches it."
        )

    return lib


def _declare_prototypes(lib: ctypes.CDLL) -> None:
    """Set ``argtypes``/``restype`` for every ``lumen_*`` export.

    Cross-referenced 1:1 against ``include/lumen.h`` and
    ``lumen_simple.h``. Keep this list in the same order as the header
    so a future ABI diff is easy to spot-check.
    """

    c = ctypes
    P = ctypes.POINTER

    lib.lumen_abi_version.argtypes = []
    lib.lumen_abi_version.restype = c.c_uint32

    lib.lumen_app_new.argtypes = [c.c_char_p]
    lib.lumen_app_new.restype = c.c_void_p

    # ABI 0.7 link-not-embed seam: build an app from prebuilt LMNA bytes with
    # no parser. data is a bytes buffer, len its length, base_dir a dir (or
    # NULL) for relative asset resolution.
    lib.lumen_app_new_from_lmna.argtypes = [c.c_char_p, c.c_size_t, c.c_char_p]
    lib.lumen_app_new_from_lmna.restype = c.c_void_p

    # 4th param is conceptually `Option<LumenFn>` -- declared as a bare
    # void* here because the actual object we pass is a `_LumenFnRaw`
    # closure (see make_callback's docstring for why), cast to c_void_p
    # at the call site.
    lib.lumen_app_expose.argtypes = [
        c.c_void_p,
        c.c_char_p,
        c.c_uint32,
        c.c_void_p,
        c.c_void_p,
    ]
    lib.lumen_app_expose.restype = c.c_uint32

    # ABI 0.3 out-parameter callback registration (LumenFnV2). Same arg
    # shape as v1; the difference is entirely in the callback's own
    # signature (out-pointer instead of by-value return).
    lib.lumen_app_expose_v2.argtypes = [
        c.c_void_p,
        c.c_char_p,
        c.c_uint32,
        c.c_void_p,
        c.c_void_p,
    ]
    lib.lumen_app_expose_v2.restype = c.c_uint32

    # ABI 0.3 id-scoped native click hook + headless run driver.
    lib.lumen_app_on_click.argtypes = [c.c_void_p, c.c_char_p, c.c_void_p, c.c_void_p]
    lib.lumen_app_on_click.restype = c.c_uint32

    lib.lumen_app_run_headless.argtypes = [c.c_void_p, c.c_uint32]
    lib.lumen_app_run_headless.restype = c.c_uint32

    # ABI 0.4 signal-change subscription. The callback is a `_LumenWatchFnRaw`
    # closure cast to c_void_p at the call site (same pattern as the expose /
    # click callbacks). Registration is global - no app handle argument.
    lib.lumen_signal_watch.argtypes = [c.c_char_p, c.c_void_p, c.c_void_p]
    lib.lumen_signal_watch.restype = c.c_uint32

    lib.lumen_app_set_title.argtypes = [c.c_void_p, c.c_char_p]
    lib.lumen_app_set_title.restype = c.c_uint32

    lib.lumen_app_set_size.argtypes = [c.c_void_p, c.c_uint32, c.c_uint32]
    lib.lumen_app_set_size.restype = c.c_uint32

    lib.lumen_app_free.argtypes = [c.c_void_p]
    lib.lumen_app_free.restype = None

    lib.lumen_app_run.argtypes = [c.c_void_p]
    lib.lumen_app_run.restype = c.c_uint32

    lib.lumen_last_error.argtypes = []
    lib.lumen_last_error.restype = c.c_char_p

    lib.lumen_last_error_global.argtypes = []
    lib.lumen_last_error_global.restype = c.c_char_p

    lib.lumen_signal_clear.argtypes = [c.c_char_p]
    lib.lumen_signal_clear.restype = c.c_uint32

    lib.lumen_signal_set_array.argtypes = [c.c_char_p, P(LumenValue)]
    lib.lumen_signal_set_array.restype = c.c_uint32

    lib.lumen_signal_set_str.argtypes = [c.c_char_p, c.c_char_p]
    lib.lumen_signal_set_str.restype = c.c_uint32

    # `buf` is a char* buffer and `out_len` a size_t*;
    # LUMEN_ERR_BUFFER_TOO_SMALL (14) sets *out_len to the required
    # capacity (byte length + 1 for the NUL).
    lib.lumen_signal_get_str.argtypes = [
        c.c_char_p,
        c.c_char_p,
        c.c_size_t,
        P(c.c_size_t),
    ]
    lib.lumen_signal_get_str.restype = c.c_uint32

    lib.lumen_signal_set_int64.argtypes = [c.c_char_p, c.c_int64]
    lib.lumen_signal_set_int64.restype = c.c_uint32

    lib.lumen_signal_get_int64.argtypes = [c.c_char_p, P(c.c_int64)]
    lib.lumen_signal_get_int64.restype = c.c_uint32

    lib.lumen_signal_set_float64.argtypes = [c.c_char_p, c.c_double]
    lib.lumen_signal_set_float64.restype = c.c_uint32

    lib.lumen_signal_get_float64.argtypes = [c.c_char_p, P(c.c_double)]
    lib.lumen_signal_get_float64.restype = c.c_uint32

    # bool is passed as a single byte on the Rust side (`bool` is
    # 1-byte, repr matches C `_Bool`/`bool` from <stdbool.h>).
    lib.lumen_signal_set_bool.argtypes = [c.c_char_p, c.c_bool]
    lib.lumen_signal_set_bool.restype = c.c_uint32

    lib.lumen_signal_get_bool.argtypes = [c.c_char_p, P(c.c_bool)]
    lib.lumen_signal_get_bool.restype = c.c_uint32

    lib.lumen_signal_set_color.argtypes = [c.c_char_p, P(c.c_uint8)]
    lib.lumen_signal_set_color.restype = c.c_uint32

    lib.lumen_signal_get_color.argtypes = [c.c_char_p, P(c.c_uint8)]
    lib.lumen_signal_get_color.restype = c.c_uint32

    # ABI 0.3 array read-back getters, same buffer convention as
    # lumen_signal_get_str.
    lib.lumen_signal_array_len.argtypes = [c.c_char_p, P(c.c_size_t)]
    lib.lumen_signal_array_len.restype = c.c_uint32

    lib.lumen_signal_array_get_field.argtypes = [
        c.c_char_p,
        c.c_size_t,
        c.c_char_p,
        c.c_char_p,
        c.c_size_t,
        P(c.c_size_t),
    ]
    lib.lumen_signal_array_get_field.restype = c.c_uint32

    lib.lumen_status_message.argtypes = [c.c_uint32]
    lib.lumen_status_message.restype = c.c_char_p

    # ------------------------------------------------------------------
    # Dynamic DOM (ABI 0.8 read side, 0.11 introspection, 0.12
    # inner_markup). `LumenNode` / `LumenEventToken` are uint64 handles;
    # out-params take a POINTER. Cross-referenced 1:1 with lumen_simple.h.
    # ------------------------------------------------------------------
    Node = c.c_uint64
    PNode = P(c.c_uint64)

    # -- query / traversal --
    lib.lumen_query.argtypes = [c.c_char_p, P(LumenNodeList)]
    lib.lumen_query.restype = c.c_uint32
    lib.lumen_query_len.argtypes = [c.c_char_p, P(c.c_size_t)]
    lib.lumen_query_len.restype = c.c_uint32
    lib.lumen_query_single.argtypes = [c.c_char_p, PNode]
    lib.lumen_query_single.restype = c.c_uint32
    lib.lumen_get_by_id.argtypes = [c.c_char_p, PNode]
    lib.lumen_get_by_id.restype = c.c_uint32
    lib.lumen_document.argtypes = [PNode]
    lib.lumen_document.restype = c.c_uint32
    lib.lumen_node_parent.argtypes = [Node, PNode]
    lib.lumen_node_parent.restype = c.c_uint32
    lib.lumen_node_first_child.argtypes = [Node, PNode]
    lib.lumen_node_first_child.restype = c.c_uint32
    lib.lumen_node_last_child.argtypes = [Node, PNode]
    lib.lumen_node_last_child.restype = c.c_uint32
    lib.lumen_node_next.argtypes = [Node, PNode]
    lib.lumen_node_next.restype = c.c_uint32
    lib.lumen_node_prev.argtypes = [Node, PNode]
    lib.lumen_node_prev.restype = c.c_uint32
    lib.lumen_node_children.argtypes = [Node, P(LumenNodeList)]
    lib.lumen_node_children.restype = c.c_uint32
    lib.lumen_node_closest.argtypes = [Node, c.c_char_p, PNode]
    lib.lumen_node_closest.restype = c.c_uint32
    lib.lumen_node_valid.argtypes = [Node, P(c.c_int)]
    lib.lumen_node_valid.restype = c.c_uint32
    lib.lumen_nodelist_get.argtypes = [LumenNodeList, c.c_size_t, PNode]
    lib.lumen_nodelist_get.restype = c.c_uint32
    lib.lumen_nodelist_free.argtypes = [LumenNodeList]
    lib.lumen_nodelist_free.restype = None

    # -- introspection reads (maps / lists / geometry) --
    lib.lumen_node_rect.argtypes = [Node, P(LumenRect)]
    lib.lumen_node_rect.restype = c.c_uint32
    lib.lumen_node_content_rect.argtypes = [Node, P(LumenRect)]
    lib.lumen_node_content_rect.restype = c.c_uint32
    lib.lumen_node_scroll.argtypes = [Node, P(LumenScroll)]
    lib.lumen_node_scroll.restype = c.c_uint32
    lib.lumen_node_is_visible.argtypes = [Node, P(c.c_int)]
    lib.lumen_node_is_visible.restype = c.c_uint32
    lib.lumen_node_z_index.argtypes = [Node, P(c.c_int)]
    lib.lumen_node_z_index.restype = c.c_uint32
    lib.lumen_node_entity_id.argtypes = [Node, P(c.c_uint32), P(c.c_uint32)]
    lib.lumen_node_entity_id.restype = c.c_uint32
    lib.lumen_node_computed_style.argtypes = [Node, P(LumenKVList)]
    lib.lumen_node_computed_style.restype = c.c_uint32
    lib.lumen_node_attrs.argtypes = [Node, P(LumenKVList)]
    lib.lumen_node_attrs.restype = c.c_uint32
    lib.lumen_node_inline_style.argtypes = [Node, P(LumenKVList)]
    lib.lumen_node_inline_style.restype = c.c_uint32
    lib.lumen_node_component.argtypes = [Node, c.c_char_p, P(LumenKVList)]
    lib.lumen_node_component.restype = c.c_uint32
    lib.lumen_node_classes.argtypes = [Node, P(LumenStrList)]
    lib.lumen_node_classes.restype = c.c_uint32
    lib.lumen_node_components.argtypes = [Node, P(LumenStrList)]
    lib.lumen_node_components.restype = c.c_uint32
    lib.lumen_node_outer_markup.argtypes = [Node, P(c.c_char_p)]
    lib.lumen_node_outer_markup.restype = c.c_uint32
    lib.lumen_node_inner_markup.argtypes = [Node, P(c.c_char_p)]
    lib.lumen_node_inner_markup.restype = c.c_uint32
    lib.lumen_dump_tree.argtypes = [P(c.c_char_p)]
    lib.lumen_dump_tree.restype = c.c_uint32
    lib.lumen_pointer_state.argtypes = [P(LumenPointerState)]
    lib.lumen_pointer_state.restype = c.c_uint32
    lib.lumen_frame_info.argtypes = [P(LumenFrameInfo)]
    lib.lumen_frame_info.restype = c.c_uint32
    lib.lumen_signals_all.argtypes = [P(LumenKVList)]
    lib.lumen_signals_all.restype = c.c_uint32

    # -- releasers for owned introspection buffers --
    lib.lumen_kvlist_free.argtypes = [LumenKVList]
    lib.lumen_kvlist_free.restype = None
    lib.lumen_strlist_free.argtypes = [LumenStrList]
    lib.lumen_strlist_free.restype = None
    lib.lumen_string_free.argtypes = [c.c_char_p]
    lib.lumen_string_free.restype = None

    # -- writes (queue on the external DOM bus) --
    lib.lumen_node_set_attr.argtypes = [Node, c.c_char_p, c.c_char_p]
    lib.lumen_node_set_attr.restype = c.c_uint32
    lib.lumen_node_remove_attr.argtypes = [Node, c.c_char_p]
    lib.lumen_node_remove_attr.restype = c.c_uint32
    lib.lumen_node_set_text.argtypes = [Node, c.c_char_p]
    lib.lumen_node_set_text.restype = c.c_uint32
    lib.lumen_node_set_inner_markup.argtypes = [Node, c.c_char_p]
    lib.lumen_node_set_inner_markup.restype = c.c_uint32
    lib.lumen_node_class_add.argtypes = [Node, c.c_char_p]
    lib.lumen_node_class_add.restype = c.c_uint32
    lib.lumen_node_class_remove.argtypes = [Node, c.c_char_p]
    lib.lumen_node_class_remove.restype = c.c_uint32
    lib.lumen_node_class_toggle.argtypes = [Node, c.c_char_p]
    lib.lumen_node_class_toggle.restype = c.c_uint32
    lib.lumen_node_set_style.argtypes = [Node, c.c_char_p, c.c_char_p]
    lib.lumen_node_set_style.restype = c.c_uint32
    lib.lumen_node_remove_style.argtypes = [Node, c.c_char_p]
    lib.lumen_node_remove_style.restype = c.c_uint32
